<resources>
    <string name="app_name">Public transport timetable</string>
    <string name="location_entry_text">Indicate your stop</string>
    <string name="location_entry_input">Soyuznaya bus stop</string>
    <string name="route_number">Route</string>
    <string name="route_number_input">22c</string>
    <string name="bus_stop">Bus stop</string>
    <string name="button_accept">Accept</string>
    <string name="button_cancel">Cancel</string>
    <string name="bus_stop_delete">Remove from route</string>
    <string name="button_skip">Skip</string>
    <string name="button_save">Save</string>
    <string name="empty_name">Empty name!</string>
    <string-array name="bus_types">
        <item>Bus</item>
        <item>Trolleybus</item>
        <item>Tram</item>
        <item>Route taxi</item>
    </string-array>
    <string name="empty_time">Empty time!</string>
    <string name="sucess_delete_route">Route successfully deleted!</string>
    <string name="success_delete_point">Point successfully deleted!</string>
    <string name="success_create_route">Route sucessfully created!</string>
    <string name="sucess_create_point">Point successfully created!</string>
    <string name="success_edit_route">Route successfully edited!</string>
</resources>